<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="329dp"
        android:layout_height="533dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.567">

        <Button
            android:id="@+id/button10"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="45dp"
            android:background="@drawable/buttonshape"
            android:text="@string/buttonPrzypominajka"
            android:textStyle="bold"
            android:visibility="visible" />

        <Button
            android:id="@+id/button11"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="90dp"
            android:background="@drawable/buttonshape"
            android:text="@string/buttonContact"
            android:textStyle="bold"
            android:visibility="visible"

            />


        <Button
            android:id="@+id/button12"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="45dp"
            android:background="@drawable/buttonshape"
            android:fontFamily="sans-serif-black"
            android:onClick="openNotes"
            android:text="@string/buttonNotes"
            android:textStyle="bold"
            android:visibility="visible" />

        <Button
            android:id="@+id/button13"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="90dp"
            android:background="@drawable/buttonshape"
            android:text="@string/buttonMultimedia"
            android:textStyle="bold"
            android:visibility="visible" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>