<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainAddReminder">

    <LinearLayout
        android:layout_width="367dp"
        android:layout_height="488dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.23">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:textAlignment="center"
            android:textSize="25dp"
            android:text="@string/addReminderTitle" />

        <EditText
            android:id="@+id/addReminderTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/hintAddReminder" />

        <EditText
            android:id="@+id/addReminderNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/addReminderNote" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/ic_menu_month" />

            <TextView
                android:id="@+id/addEditTextDateRemind"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:text="Ustaw date"
                android:inputType="date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/ic_menu_recent_history" />

            <TextView
                android:id="@+id/addEditTextTimeRemind"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:textSize="15dp"
                android:text="Ustaw godzine"
                android:inputType="time" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="25dp">

            <Button
                android:id="@+id/addReminderDiscard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="25dp"
                android:layout_marginTop="50dp"
                android:text="@string/buttonDiscard" />

            <Button
                android:id="@+id/addReminderSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="50dp"
                android:text="@string/buttonSubmit" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>